# terrametria

./: .env.example  .gitignore  README.md  app.yml  databricks.yml  deploy-app.sh  package.sh  pyproject.toml
hooks/: build.py  yarn_build.py
src/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: Loading.tsx  MapControls.tsx  Navbar.tsx  mode-toggle.tsx  theme-provider.tsx
src/frontend/src/lib/: api.ts  stores.ts  types.ts
src/frontend/src/pages/: DensityMap.tsx  Index.tsx  NotFound.tsx
src/terrametria/: backend.py  config.py  entrypoint.py  loader.py  logger.py
tests/: __init__.py  test_api.py
