[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "terrametria"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "renardeinside", email = "polarpersonal@gmail.com" }]
dependencies = [
  "fastapi",
  "uvicorn",
  "databricks-sql-connector",
  "python-dotenv",
  "databricks-sdk",
  "geopandas",
  "numpy>2"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/terrametria/_version.py"

[tool.hatch.envs.default]
python = "3.10"
# we only needs these dependencies for development
dependencies = [
  "pyspark",
  "delta-spark",
  "pytest",
  "pandas",
  "numpy",
  "requests",
  "httpx",
  "hatchling"
]

[project.scripts]
loader = "terrametria.entrypoint:loader"

[tool.hatch.envs.default.scripts]

dev-frontend = "yarn --cwd src/frontend dev"
build-frontend = "yarn --cwd src/frontend build"

dev-backend = "uvicorn terrametria.backend:app --reload --host=0.0.0.0 --port=8000"
build-for-apps = [
  "rm -rf .build",
  "mkdir -p .build",
  "hatch build -t wheel -c",
  "cp ./dist/*.whl .build/",
  "cd .build && ls *.whl > requirements.txt",
]


[tool.hatch.build.targets.wheel]
# we need to explicitly include this folder because it's .gitignore'd
artifacts = ["src/terrametria/static/**"]

[tool.hatch.build.hooks.custom]
path = "hooks/yarn_build.py"